nymea-energy-plugin-consolinno (1.7.06-4) buster focal jammy; urgency=medium
* new method GetGridSupportThing
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 27 Jun 2024 8:20:53 +0200
 
 nymea-energy-plugin-consolinno (1.7.06-3) buster focal jammy; urgency=medium
* Controller for HP is now not alway set to low when a limit is set
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 17 Jun 2024 8:20:53 +0200

nymea-energy-plugin-consolinno (1.7.06-2) buster focal jammy; urgency=medium
* Change the state of the heat pump to Low when a limit is set (future enhancement: restrict control to CLS units only).
* Change the state of the heat pump if the limit at NAP is exceeded.
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 13 Jun 2024 12:50:53 +0200

nymea-energy-plugin-consolinno (1.7.06-1) buster focal jammy; urgency=medium
* merged with nymea-energy-plugin-consolinno
 -- Tim Fischer <t.fischer@consolinno.de> Tue, 13 Jun 2024 08:50:53 +0200

nymea-energy-plugin-consolinno (1.7.06) buster bullseye focal jammy; urgency=medium
    Added multiple intergration plugins to meta package
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Wed, 05 Jun 2024 14:04:14 +0100

nymea-energy-plugin-consolinno (1.7.05-6) buster bullseye focal jammy; urgency=medium
    * Added cigate-modbus-adapter to consolinno-hems package
    * Split up consolinno-hems meta package
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 19 Mar 2024 14:04:14 +0100

nymea-energy-plugin-consolinno (1.7.03-1) buster focal jammy; urgency=medium
    * Added smart washing machine support 
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 23 Jan 2024 09:12:14 +0100

nymea-energy-plugin-consolinno (1.7.02-1) buster focal jammy; urgency=medium
    * Improved ConEMS state
 -- Leonhard Heizinger <lheizinger@CEPF33G3RN>  Tue, 28 Nov 2023 09:12:14 +0100

nymea-energy-plugin-consolinno (1.7.002) buster focal jammy; urgency=medium
* New Version for supporting §14a in a EMS 